исправленные баги с вернуться назад:
баги всякие исправил, вроде сейчас норм, не исправил баг с удалением

--- a/templates/recipes/all_recipes.html
+++ b/templates/recipes/all_recipes.html
@@ -86,9 +86,10 @@
                         </ul>
                     </div>
                     
-                    <a href="{% url 'recipe_detail' recipe.id %}" class="btn">
+                    <a href="{% url 'recipe_detail' recipe.id %}?from=all" class="btn">
                         <i class="fas fa-eye"></i> Посмотреть рецепт
                     </a>
+
                 </div>
             </div>
             {% endfor %}
